--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <h1 id="title" class="title is-1">
               I'm 
               <span>
-                  <a href="#"><img id="dball" src="https://vignette.wikia.nocookie.net/dragonball/images/2/25/426px-One_Star_DB_svg.png/revision/latest?cb=20070505115633" alt=""></a></span><span id="alias">RANGE</span><span id="myName"class="vanish">MAR</span>
+                  <a href="#"><img id="dball" src="https://vignette.wikia.nocookie.net/dragonball/images/2/25/426px-One_Star_DB_svg.png/revision/latest?cb=20070505115633" alt=""></a></span><span id="alias">range</span><span id="myName"class="vanish">MAR</span>
           </h1>
           <h2 id="subtitle" class="subtitle aldrich is-4">
             A glass half full
