--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                     <div class="card">
                         <header class="card-header">
                             <p class="card-header-title aldrich heavy">
-                                JS Calculator<span class="techList" style="display:none">html5,css3,bulma,javascript,js,jquery </span>
+                                JS Calc<span class="techList" style="display:none">html5,css3,bulma,javascript,js,jquery </span>
                             </p>
                             <p class="card-header-icon ">
                                 <span class="icon">
@@ -370,7 +370,7 @@
                 <div class="projectCard column is-one-third-desktop is-half-tablet">
                     <div class="card">
                         <header class="card-header">
-                            <p class="card-header-title aldrich heavy">
+                            <p class="card-header-title is-size-6 aldrich heavy">
                                 Drum Machine<span class="techList" style="display:none">html5,css3,bulma,javascript,js,jquery </span>
                             </p>
                             <p class="card-header-icon ">
@@ -409,7 +409,7 @@
                 <div class="projectCard column is-one-third-desktop is-half-tablet">
                     <div class="card">
                         <header class="card-header">
-                            <p class="card-header-title is-size-6 aldrich heavy">
+                            <p class="card-header-title is-size-7 aldrich heavy">
                                 Pawmodoro Clock<span class="techList" style="display:none">html5,css3,bulma,javascript,js,jquery </span>
                             </p>
                             <p class="card-header-icon ">
@@ -565,7 +565,7 @@
                 <div class="projectCard column is-one-third-desktop is-half-tablet">
                     <div class="card">
                         <header class="card-header">
-                            <p class="card-header-title aldrich heavy">
+                            <p class="card-header-title is-size-7 aldrich heavy">
                                 Tic-Tac-Toe<span class="techList" style="display:none">html5,css3,javascript,js </span>
                             </p>
                             <p class="card-header-icon ">
@@ -679,7 +679,7 @@
         <footer id="footer" class="footer">
           <div class="container">
             <div class="content has-text-centered">
-              <p class="saiyan is-size-1 has-text-primary">
+              <p id="footer-text" class="saiyan is-size-1 has-text-primary">
                 Thanks for Visting
               </p>      
             </div>
