--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                 <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
                     <div class="card">
                         <header class="card-header">
-                            <p class="card-header-title is-size-7 aldrich heavy">
+                            <p class="card-header-title is-size-7-mobile is-size-6-tablet aldrich heavy">
                                 Pawmodoro Clock<span class="techList" style="display:none">html5,css3,bulma,javascript,js,jquery </span>
                             </p>
                             <p class="card-header-icon ">
@@ -565,7 +565,7 @@
                 <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
                     <div class="card">
                         <header class="card-header">
-                            <p class="card-header-title is-size-7 aldrich heavy">
+                            <p class="card-header-title is-size-7-mobile is-size-6-tablet aldrich heavy">
                                 Tic-Tac-Toe<span class="techList" style="display:none">html5,css3,javascript,js </span>
                             </p>
                             <p class="card-header-icon ">
