--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
       <div class="hero-body" id="main-title">
         <div class="container">
           <h1 id="title" class="title is-1">
-              I'm 
               <span>
-                  <a href="#"><img id="dball" src="https://vignette.wikia.nocookie.net/dragonball/images/2/25/426px-One_Star_DB_svg.png/revision/latest?cb=20070505115633" alt=""></a></span><span id="alias">range</span><span id="myName"class="vanish">MAR</span>
+                  <a href="#"><img id="dball" src="https://vignette.wikia.nocookie.net/dragonball/images/2/25/426px-One_Star_DB_svg.png/revision/latest?cb=20070505115633" alt=""></a></span><span id="alias">range</span><span id="myName"class="vanish">mar</span><span id="alias2" class=""> juice</span>
           </h1>
           <h2 id="subtitle" class="subtitle aldrich is-4">
             A glass half full
@@ -333,7 +332,7 @@
                     <div class="card">
                         <header class="card-header">
                             <p class="card-header-title aldrich heavy">
-                                JS Calc<span class="techList" style="display:none">html5,css3,bulma,javascript,js,jquery </span>
+                                JS <br>Calc<span class="techList" style="display:none">html5,css3,bulma,javascript,js,jquery </span>
                             </p>
                             <p class="card-header-icon ">
                                 <span class="icon">
@@ -449,7 +448,7 @@
                     <div class="card">
                         <header class="card-header">
                             <p class="card-header-title is-size-6 aldrich heavy">
-                                Quote Machine<span class="techList" style="display:none">html5,css3,javascript,js,ajax,api </span>
+                                Quote <br>Machine<span class="techList" style="display:none">html5,css3,javascript,js,ajax,api </span>
                             </p>
                             <p class="card-header-icon ">
                                 <span class="icon">
@@ -527,7 +526,7 @@
                     <div class="card">
                         <header class="card-header">
                             <p class="card-header-title aldrich heavy">
-                                Color Game<span class="techList" style="display:none">html5,css3,bulma,javascript,js </span>
+                                Color <br> Game<span class="techList" style="display:none">html5,css3,bulma,javascript,js </span>
                             </p>
                             <p class="card-header-icon ">
                                 <span class="icon">
