--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
                     <div class="card">
                         <header class="card-header">
-                            <p class="card-header-title aldrich heavy">
+                            <p class="card-header-title is-size-6-mobile aldrich heavy">
                                 Wiki Poems<span class="techList" style="display:none">html5,css3,bulma,javascript,js,jquery,ajax,api </span>
                             </p>
                             <p class="card-header-icon ">
@@ -332,7 +332,7 @@
                     <div class="card">
                         <header class="card-header">
                             <p class="card-header-title aldrich heavy">
-                                JS <br>Calc<span class="techList" style="display:none">html5,css3,bulma,javascript,js,jquery </span>
+                                JS Calc<span class="techList" style="display:none">html5,css3,bulma,javascript,js,jquery </span>
                             </p>
                             <p class="card-header-icon ">
                                 <span class="icon">
@@ -369,7 +369,7 @@
                 <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
                     <div class="card">
                         <header class="card-header">
-                            <p class="card-header-title is-size-6 aldrich heavy">
+                            <p class="card-header-title is-size-6-mobile aldrich heavy">
                                 Drum Machine<span class="techList" style="display:none">html5,css3,bulma,javascript,js,jquery </span>
                             </p>
                             <p class="card-header-icon ">
@@ -408,7 +408,7 @@
                 <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
                     <div class="card">
                         <header class="card-header">
-                            <p class="card-header-title is-size-7-mobile is-size-6-tablet aldrich heavy">
+                            <p class="card-header-title is-size-6 aldrich heavy">
                                 Pawmodoro Clock<span class="techList" style="display:none">html5,css3,bulma,javascript,js,jquery </span>
                             </p>
                             <p class="card-header-icon ">
@@ -447,8 +447,8 @@
                 <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
                     <div class="card">
                         <header class="card-header">
-                            <p class="card-header-title is-size-6 aldrich heavy">
-                                Quote <br>Machine<span class="techList" style="display:none">html5,css3,javascript,js,ajax,api </span>
+                            <p class="card-header-title is-size-5 aldrich heavy">
+                                Quote Machine<span class="techList" style="display:none">html5,css3,javascript,js,ajax,api </span>
                             </p>
                             <p class="card-header-icon ">
                                 <span class="icon">
@@ -465,12 +465,12 @@
                                     <i class="fab fa-css3"></i>
                                 </span>
                             </p>
-                            <!-- <p class="card-header-icon ">
+                            <p class="card-header-icon ">
                                 <span class="icon">
                                     <img id="jquery" src="https://cdn4.iconfinder.com/data/icons/scripting-and-programming-languages/512/jquery-512.png"
                                         alt="">
                                 </span>
-                            </p> -->
+                            </p>
                         </header>
                         <div class="card-image">
                             <figure class="image"><img src="Images/QuoteImage.png" alt=""></figure>
@@ -486,7 +486,7 @@
                 <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
                     <div class="card">
                         <header class="card-header">
-                            <p class="card-header-title aldrich heavy">
+                            <p class="card-header-title is-size-6 aldrich heavy">
                                 This Page<span class="techList" style="display:none">html5,css3,bulma,javascript,js,jquery </span>
                             </p>
                             <p class="card-header-icon ">
@@ -525,8 +525,8 @@
                 <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
                     <div class="card">
                         <header class="card-header">
-                            <p class="card-header-title aldrich heavy">
-                                Color <br> Game<span class="techList" style="display:none">html5,css3,bulma,javascript,js </span>
+                            <p class="card-header-title is-size-6-mobile aldrich heavy">
+                                Color Game<span class="techList" style="display:none">html5,css3,bulma,javascript,js </span>
                             </p>
                             <p class="card-header-icon ">
                                 <span class="icon">
@@ -564,7 +564,7 @@
                 <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
                     <div class="card">
                         <header class="card-header">
-                            <p class="card-header-title is-size-6-mobile is-size-6-tablet aldrich heavy">
+                            <p class="card-header-title is-size-6-mobile aldrich heavy">
                                 Tic Tac Toe<span class="techList" style="display:none">html5,css3,javascript,js </span>
                             </p>
                             <p class="card-header-icon ">
