--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         
       <div class="hero-body" id="main-title">
         <div class="container">
-          <h1 id="title" class="title is-1">
+            <h1 class="title vanish">Omar Juice</h1>
+          <h1 id="head" class="title is-1">
               <span>
                   <a href="#"><img id="dball" src="https://vignette.wikia.nocookie.net/dragonball/images/2/25/426px-One_Star_DB_svg.png/revision/latest?cb=20070505115633" alt=""></a></span><span id="alias">RANGE</span><span id="myName"class="vanish">MAR</span><span id="alias2" class=""> JUICE</span>
           </h1>
