fixed search functionality returning negative values

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                             <div id="search-field" class="field has-text-centered">
                                 <div class="control">
                                     <input id="Search" class="input is-success has-background-black has-text-white heavy aldrich" type="text"
-                                        placeholder="Search projects for tech">
+                                        placeholder="Search (e.g. JavaScript)">
                                 </div>
                             </div>
                         </div>
