changed mongo icon

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                                     <p class="card-header-icon">
                                         <span class="icon tooltip">
                                                 <span class="tooltiptext orbitron">MongoDB </span>
-                                            <img class="icon-img" src="http://cdn.onlinewebfonts.com/svg/img_207455.png" alt="mongodb" srcset="">
+                                            <img class="icon-img-dark" src="Images/mongopng.png" alt="mongodb" srcset="">
                                         </span>
                                     </p>
                                 </header>
