--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                                     <figure class="image"><img src="Images/MicroservicesImage.png" alt=""></figure>
                                 </div>
                                 <footer class="card-footer">
-                                    <a href="https://microservicesapi-ojameer1.c9users.io/" target="_blank" class="card-footer-item button is-primary orbitron heavy">View <i class="fas fa-cloud"></i></a>
+                                    <a href="https://microservices-api.herokuapp.com/" target="_blank" class="card-footer-item button is-primary orbitron heavy">View <span class="icon"> <img id="herokuICON" class="icon-img-dark" src="Images/herokuICON.png" alt="" srcset=""></span></i></a>
                                     <a href="https://github.com/OmarJuice/MicroservicesAPI" target="_blank" class="card-footer-item button is-success orbitron heavy">Source
                                         Code</a>
         
