--- a/index.html
+++ b/index.html
@@ -89,11 +89,12 @@
                 <h1 id="head" class="title is-1">
                     <span>
                         <a href="#"><img id="dball" src="https://vignette.wikia.nocookie.net/dragonball/images/2/25/426px-One_Star_DB_svg.png/revision/latest?cb=20070505115633"
-                                alt=""></a></span><span id="alias">RANGE</span><span id="myName" class="vanish">MAR</span><span
-                        id="alias2" class=""> JUICE</span>
+                                alt=""></a></span><span id="alias">MAR</span>
+                    <!-- <span id="myName" class="vanish">MAR</span> -->
+                    <span id="alias2" class=""> JUICE</span>
                 </h1>
                 <h2 id="subtitle" class="subtitle aldrich is-4">
-                    A glass half full
+                    A FullStack Web Developer
                 </h2>
                 <hr>
             </div>
