modified weather project card

--- a/index.html
+++ b/index.html
@@ -340,6 +340,12 @@
                                     <i class="fab fa-react fa-lg"></i>
                                 </span>
                             </p>
+                            <p class="card-header-icon">
+                                <span class="icon tooltip">
+                                    <span class="tooltiptext orbitron">Redux </span>
+                                    <img src="https://avatars0.githubusercontent.com/u/13142323?s=400&v=4" alt="">
+                                </span>
+                            </p>
 
                         </header>
                         <div class="card-image">
