--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     <div class="card">
                         <header class="card-header">
                             <p class="card-header-title aldrich heavy">
-                                Weather<span class="techList" style="display:none">html5,css3,bulma,javascript,js,ajax,api,react,reactjs
+                                Weather<span class="techList" style="display:none">html5,css3,bulma,javascript,js,ajax,api,react,reactjs,redux
                                 </span>
                             </p>
                             <p class="card-header-icon">
