--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <span id="alias2" class=""> JUICE</span>
                 </h1>
                 <h2 id="subtitle" class="subtitle aldrich is-4">
-                    A FullStack Web Developer
+                    A Fullstack Web Developer
                 </h2>
                 <hr>
             </div>
