--- a/index.html
+++ b/index.html
@@ -323,6 +323,53 @@
                     <div class="card">
                         <header class="card-header">
                             <p class="card-header-title aldrich heavy">
+                                Hangman<span class="techList" style="display:none">html5,css3,bulma,javascript,js,ajax,api,react,reactjs,redux,node,express,node.js,mongo,db,mongodb
+                                </span>
+                            </p>
+
+
+                            <p class="card-header-icon">
+                                <span class="icon tooltip">
+                                    <span class="tooltiptext orbitron">React </span>
+                                    <i class="fab fa-react fa-lg"></i>
+                                </span>
+                            </p>
+                            <p class="card-header-icon">
+                                <span class="icon tooltip">
+                                    <span class="tooltiptext orbitron">Redux </span>
+                                    <img src="https://avatars0.githubusercontent.com/u/13142323?s=400&v=4" alt="">
+                                </span>
+                            </p>
+                            <p class="card-header-icon">
+                                <span class="icon tooltip">
+                                    <span class="tooltiptext orbitron">Node Express </span>
+                                    <i class="fab fa-node-js fa-lg"></i>
+                                </span>
+                            </p>
+                            <p class="card-header-icon">
+                                <span class="icon tooltip">
+                                    <span class="tooltiptext orbitron">Socket.io </span>
+                                    <img src="https://cdn.worldvectorlogo.com/logos/socket-io.svg" alt="">
+                                </span>
+                            </p>
+
+                        </header>
+                        <div class="card-image">
+                            <figure class="image"><img src="Images/HangmanImage.png" alt=""></figure>
+                        </div>
+                        <footer class="card-footer">
+                            <a href="https://omarjuice.github.io/Hangman" target="_blank" class="card-footer-item button is-primary orbitron heavy">View
+                                <i class="fab fa-github-alt"></i></a>
+                            <a href="https://github.com/OmarJuice/Hangman" target="_blank" class="card-footer-item button is-success orbitron heavy">Source
+                                Code</a>
+
+                        </footer>
+                    </div>
+                </div>
+                <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
+                    <div class="card">
+                        <header class="card-header">
+                            <p class="card-header-title aldrich heavy">
                                 Exercise<span class="techList" style="display:none">html5,css3,bulma,javascript,js,ajax,api,react,reactjs,redux,node,express,node.js,mongo,db,mongodb
                                 </span>
                             </p>
