--- a/index.html
+++ b/index.html
@@ -340,6 +340,13 @@
                                     <img src="https://avatars0.githubusercontent.com/u/13142323?s=400&v=4" alt="">
                                 </span>
                             </p>
+                            <p class="card-header-icon is-hidden-mobile">
+                                <span class="icon tooltip">
+                                    <span class="tooltiptext orbitron">BulmaCSS </span>
+                                    <img src="https://api.compargram.com/media/__sized__/images/2018/7/25/0bd7624cc7a94463be73f4bac71cc840-crop-c0-5__0-5-400x400.png"
+                                        alt="">
+                                </span>
+                            </p>
                             <p class="card-header-icon">
                                 <span class="icon tooltip">
                                     <span class="tooltiptext orbitron">Node Express </span>
@@ -385,6 +392,13 @@
                                 <span class="icon tooltip">
                                     <span class="tooltiptext orbitron">Redux </span>
                                     <img src="https://avatars0.githubusercontent.com/u/13142323?s=400&v=4" alt="">
+                                </span>
+                            </p>
+                            <p class="card-header-icon is-hidden-mobile">
+                                <span class="icon tooltip">
+                                    <span class="tooltiptext orbitron">BulmaCSS </span>
+                                    <img src="https://api.compargram.com/media/__sized__/images/2018/7/25/0bd7624cc7a94463be73f4bac71cc840-crop-c0-5__0-5-400x400.png"
+                                        alt="">
                                 </span>
                             </p>
                             <p class="card-header-icon">
