--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Portfolio</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_package_v0.16/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon_package_v0.16//favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon_package_v0.16//favicon-16x16.png">
-    <link rel="manifest" href="favicon_package_v0.16//site.webmanifest">
-    <link rel="mask-icon" href="favicon_package_v0.16//safari-pinned-tab.svg" color="#d5b15b">
+    <link rel="apple-touch-icon" sizes="180x180" href="/Ofavicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Ofavicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Ofavicon/favicon-16x16.png">
+    <link rel="manifest" href="Ofavicon/site.webmanifest">
+    <link rel="mask-icon" href="Ofavicon/safari-pinned-tab.svg" color="#d5b15b">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="https://unpkg.com/bulmaswatch/superhero/bulmaswatch.min.css">
@@ -30,11 +30,11 @@
         <nav id="nav" class="navbar has-background-black is-fixed-top" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
 
-                <a href="#main-title" id="brand" class="navbar-item saiyan">
-                    OJ
+                <a href="#main-title" id="" class="navbar-item saiyan">
+                    <img src="/Images/OJLOGO.svg" alt="" srcset="">
                 </a>
 
-                <a role="button" class="navbar-burger burger has-text-success" aria-label="menu" aria-expanded="false"
+                <a role="button" class="navbar-burger burger indigo" aria-label="menu" aria-expanded="false"
                     data-target="navbarBasicExample" id="burger">
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
@@ -47,31 +47,31 @@
 
                 <div class="navbar-end">
                     <a class="navbar-item link is-invisible" href="#about">
-                        <span class="icon navicon has-text-success">
+                        <span class="icon navicon indigo">
                             <i class="fas fa-info"></i>
                         </span>
                         <span class="linkname">About</span>
                     </a>
                     <a class="navbar-item link is-invisible" href="#services">
-                        <span class="icon navicon has-text-success">
+                        <span class="icon navicon indigo">
                             <i class="fas fa-bars"></i>
                         </span>
                         <span class="linkname">Services</span>
                     </a>
                     <a class="navbar-item link is-invisible" href="#resume">
-                        <span class="icon navicon has-text-success">
+                        <span class="icon navicon indigo">
                             <i class="fas fa-file-alt"></i>
                         </span>
                         <span class="linkname">Resume</span>
                     </a>
                     <a class="navbar-item link" href="#portfolio">
-                        <span class="icon navicon has-text-success">
+                        <span class="icon navicon indigo">
                             <i class="fas fa-th-list"></i>
                         </span>
                         <span class="linkname">Portfolio</span>
                     </a>
                     <a class="navbar-item link is-invisible" href="#contact">
-                        <span class="icon navicon has-text-success">
+                        <span class="icon navicon indigo">
                             <i class="fas fa-envelope"></i>
                         </span>
                         <span class="linkname">Contact</span>
@@ -88,8 +88,7 @@
                 <h1 class="title vanish">Omar Juice</h1>
                 <h1 id="head" class="title is-1">
                     <span>
-                        <a href="#"><img id="dball" src="https://vignette.wikia.nocookie.net/dragonball/images/2/25/426px-One_Star_DB_svg.png/revision/latest?cb=20070505115633"
-                                alt=""></a></span><span id="alias">MAR</span>
+                        <a href="#"><img id="dball" src="Images/Oembedded.svg" alt=""></a></span><span id="alias">MAR</span>
                     <!-- <span id="myName" class="vanish">MAR</span> -->
                     <span id="alias2" class=""> JUICE</span>
                 </h1>
@@ -223,13 +222,13 @@
                         <h1 class="title is-4 orbitron card-header">
                             Front End Web Development
 
-                            <span class="icon icon-services has-text-success first-icon">
+                            <span class="icon icon-services indigo first-icon">
                                 <i class="fas fa-code"></i>
                             </span>
-                            <span class="icon icon-services has-text-success">
+                            <span class="icon icon-services indigo">
                                 <i class="fab fa-css3"></i>
                             </span>
-                            <span class="icon icon-services has-text-success">
+                            <span class="icon icon-services indigo">
                                 <i class="fab fa-js fa-lg"></i>
                             </span>
 
@@ -256,13 +255,13 @@
                         <h1 class="title is-4 orbitron card-header">
                             Back End Web Development
 
-                            <span class="icon icon-services has-text-success first-icon">
+                            <span class="icon icon-services indigo first-icon">
                                 <i class="fab fa-node-js"></i>
                             </span>
-                            <span class="icon icon-services has-text-success">
+                            <span class="icon icon-services indigo">
                                 <i class="fab fa-python"></i>
                             </span>
-                            <span class="icon icon-services has-text-success">
+                            <span class="icon icon-services indigo">
                                 <i class="fas fa-database"></i>
                             </span>
                         </h1>
@@ -365,9 +364,9 @@
                             <figure class="image"><img src="Images/HangmanImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://omarjuice.github.io/Hangman" target="_blank" class="card-footer-item button is-primary orbitron heavy">View
+                            <a href="https://omarjuice.github.io/Hangman" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/Hangman" target="_blank" class="card-footer-item button is-success orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/Hangman" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -420,9 +419,9 @@
                             <figure class="image"><img src="Images/ExerciseImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://omarjuice.github.io/ExerciseTracker" target="_blank" class="card-footer-item button is-primary orbitron heavy">View
+                            <a href="https://omarjuice.github.io/ExerciseTracker" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/ExerciseTracker" target="_blank" class="card-footer-item button is-success orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/ExerciseTracker" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -461,9 +460,9 @@
                             <figure class="image"><img src="Images/WeatherImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://omarjuice.github.io/weather-app" target="_blank" class="card-footer-item button is-primary orbitron heavy">View
+                            <a href="https://omarjuice.github.io/weather-app" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/weather-app" target="_blank" class="card-footer-item button is-success orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/weather-app" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -495,10 +494,10 @@
                             <figure class="image"><img src="Images/MicroservicesImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://microservices-api.herokuapp.com/" target="_blank" class="card-footer-item button is-primary orbitron heavy">View
-                                <span class="icon"> <img id="herokuICON" class="icon-img-dark" src="Images/herokuICON.png"
-                                        alt="" srcset=""></span></i></a>
-                            <a href="https://github.com/OmarJuice/MicroservicesAPI" target="_blank" class="card-footer-item button is-success orbitron heavy">Source
+                            <a href="https://microservices-api.herokuapp.com/" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
+                                <span class="icon"> <img id="herokuICON" class="" src="Images/herokuICON.png" alt=""
+                                        srcset=""></span></i></a>
+                            <a href="https://github.com/OmarJuice/MicroservicesAPI" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -542,9 +541,9 @@
                             <figure class="image"><img src="Images/WikiPoemsImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://omarjuice.github.io/WikiPoems" target="_blank" class="card-footer-item button is-primary orbitron heavy">View
+                            <a href="https://omarjuice.github.io/WikiPoems" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/WikiPoems" target="_blank" class="card-footer-item button is-success orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/WikiPoems" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -588,9 +587,9 @@
                             <figure class="image"><img src="Images/JSCalcImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://omarjuice.github.io/Calculator" target="_blank" class="card-footer-item button is-primary orbitron heavy">View
+                            <a href="https://omarjuice.github.io/Calculator" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/Calculator" target="_blank" class="card-footer-item button is-success orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/Calculator" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -634,9 +633,9 @@
                             <figure class="image"><img src="Images/DrumImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://omarjuice.github.io/DrumMachine" target="_blank" class="card-footer-item button is-primary orbitron heavy">View
+                            <a href="https://omarjuice.github.io/DrumMachine" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/DrumMachine" target="_blank" class="card-footer-item button is-success orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/DrumMachine" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -681,9 +680,9 @@
                             <figure class="image"><img src="Images/ClockImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://omarjuice.github.io/PawmodoroClock" target="_blank" class="card-footer-item button is-primary orbitron heavy">View
+                            <a href="https://omarjuice.github.io/PawmodoroClock" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/PawmodoroClock" target="_blank" class="card-footer-item button is-success orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/PawmodoroClock" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -727,9 +726,9 @@
                             <figure class="image"><img src="Images/QuoteImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://omarjuice.github.io/QuoteMachine" target="_blank" class="card-footer-item button is-primary orbitron heavy">View
+                            <a href="https://omarjuice.github.io/QuoteMachine" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/QuoteMachine" target="_blank" class="card-footer-item button is-success orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/QuoteMachine" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -774,8 +773,9 @@
                             <figure class="image"><img src="Images/PortfolioImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="#" class="card-footer-item button is-primary orbitron heavy">View <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/OmarJuice.github.io" target="_blank" class="card-footer-item button is-success orbitron heavy">Source
+                            <a href="#" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
+                                <i class="fab fa-github-alt"></i></a>
+                            <a href="https://github.com/OmarJuice/OmarJuice.github.io" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -820,9 +820,9 @@
                             <figure class="image"><img src="Images/ColorGameImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://omarjuice.github.io/ColorGame" target="_blank" class="card-footer-item button is-primary orbitron heavy">View
+                            <a href="https://omarjuice.github.io/ColorGame" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/ColorGame" target="_blank" class="card-footer-item button is-success orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/ColorGame" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -865,9 +865,9 @@
                             <figure class="image"><img class="project-image" src="Images/TicTacToeImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://omarjuice.github.io/TicTacToe" target="_blank" class="card-footer-item button is-primary orbitron heavy">View
+                            <a href="https://omarjuice.github.io/TicTacToe" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/TicTacToe" target="_blank" class="card-footer-item button is-success orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/TicTacToe" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
